Initial commit to add files.

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -7,7 +7,19 @@ $menuFont: "PT Sans Caption";
 $siteColour: #b3966e;
 $menuitemColour: #b39663;
 
+h2.page-title
+    border-bottom: 1px solid #000;
+    width: 100%; 
 
+
+.news-title
+    font-size: 16pt;
+    font-weight: bold;
+
+
+.publish-date
+    font-style: italic;
+    font-size: 12pt;
 
 
 body
